mise à jour du sytème de traduction

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -258,5 +258,137 @@
     "Yes": "Oui",
     "You are receiving this email because we received a password reset request for your account.": "Vous recevez cet e-mail car nous avons reçu une demande de réinitialisation de mot de passe pour votre compte.",
     "You're logged in!": "Vous êtes connecté !",
-    "Your email address is unverified.": "Votre adresse e-mail n'est pas vérifiée."
+    "Your email address is unverified.": "Votre adresse e-mail n'est pas vérifiée.",
+    
+    "NIF CARGO - Transport & Logistique": "NIF CARGO - Transport & Logistique",
+    "Accueil": "Accueil",
+    "Services": "Services", 
+    "Suivi": "Suivi",
+    "Galerie": "Galerie",
+    "À Propos": "À Propos",
+    "Contact": "Contact",
+    "Connexion": "Connexion",
+    "Inscription": "Inscription",
+    "Déconnexion": "Déconnexion",
+    "Mon Compte": "Mon Compte",
+    "Tableau de Bord": "Tableau de Bord",
+    "Administration": "Administration",
+    "Langue": "Langue",
+    "Français": "Français",
+    "English": "English",
+    "中文": "中文",
+    
+    "Votre partenaire de confiance pour tous vos besoins de transport": "Votre partenaire de confiance pour tous vos besoins de transport",
+    "Transport Sécurisé et Rapide": "Transport Sécurisé et Rapide",
+    "De Lomé à travers le monde, nous livrons vos colis en toute sécurité": "De Lomé à travers le monde, nous livrons vos colis en toute sécurité",
+    "Demander un Devis": "Demander un Devis",
+    "Suivre un Colis": "Suivre un Colis",
+    "Nos Services": "Nos Services",
+    "Pourquoi Nous Choisir": "Pourquoi Nous Choisir",
+    "Témoignages": "Témoignages",
+    
+    "Express": "Express",
+    "Livraison rapide sous 24-48h": "Livraison rapide sous 24-48h",
+    "Standard": "Standard", 
+    "Livraison économique sous 3-5 jours": "Livraison économique sous 3-5 jours",
+    "Fret": "Fret",
+    "Transport de marchandises volumineuses": "Transport de marchandises volumineuses",
+    "International": "International",
+    "Expédition vers le monde entier": "Expédition vers le monde entier",
+    
+    "Demande de Transport": "Demande de Transport",
+    "Ville de Départ": "Ville de Départ",
+    "Ville de Destination": "Ville de Destination",
+    "Nature du Colis": "Nature du Colis",
+    "Poids (kg)": "Poids (kg)",
+    "Volume (m³)": "Volume (m³)",
+    "Type de Transport": "Type de Transport",
+    "Urgent": "Urgent",
+    "Description": "Description",
+    "Numéro de Suivi": "Numéro de Suivi",
+    "Statut": "Statut",
+    "Frais d'Expédition": "Frais d'Expédition",
+    "Créer une Demande": "Créer une Demande",
+    "Détails de la Demande": "Détails de la Demande",
+    
+    "En Attente": "En Attente",
+    "Confirmée": "Confirmée",
+    "En Cours": "En Cours", 
+    "En Transit": "En Transit",
+    "Livrée": "Livrée",
+    "Annulée": "Annulée",
+    
+    "Suivi de Colis": "Suivi de Colis",
+    "Entrez votre numéro de suivi": "Entrez votre numéro de suivi",
+    "Suivre": "Suivre",
+    "Informations de Suivi": "Informations de Suivi",
+    "Statut Actuel": "Statut Actuel",
+    "Livraison Estimée": "Livraison Estimée",
+    "Historique du Colis": "Historique du Colis",
+    "Détails de l'Expédition": "Détails de l'Expédition",
+    "Aucune information trouvée pour ce numéro de suivi": "Aucune information trouvée pour ce numéro de suivi",
+    
+    "Nous Contacter": "Nous Contacter",
+    "Contactez-nous": "Contactez-nous",
+    "Adresse": "Adresse",
+    "Téléphone": "Téléphone",
+    "Heures d'ouverture": "Heures d'ouverture",
+    "Envoyer un Message": "Envoyer un Message",
+    "Votre Nom": "Votre Nom",
+    "Votre Email": "Votre Email",
+    "Sujet": "Sujet",
+    "Votre Message": "Votre Message",
+    "Merci pour votre message. Nous vous répondrons bientôt.": "Merci pour votre message. Nous vous répondrons bientôt.",
+    
+    "À Propos de Nous": "À Propos de Nous",
+    "Liens Rapides": "Liens Rapides",
+    "Informations de Contact": "Informations de Contact",
+    "Suivez-nous": "Suivez-nous",
+    "Politique de Confidentialité": "Politique de Confidentialité",
+    "Conditions d'Utilisation": "Conditions d'Utilisation",
+    "Tous droits réservés": "Tous droits réservés",
+    "NIF CARGO est votre partenaire de confiance pour tous vos besoins de transport et de logistique au Togo et dans la région.": "NIF CARGO est votre partenaire de confiance pour tous vos besoins de transport et de logistique au Togo et dans la région.",
+    
+    "Vue d'ensemble": "Vue d'ensemble",
+    "Statistiques": "Statistiques",
+    "Activité récente": "Activité récente",
+    "Actions rapides": "Actions rapides",
+    "Mes Demandes": "Mes Demandes",
+    "Notifications": "Notifications",
+    "Mon Profil": "Mon Profil",
+    "Total des Demandes": "Total des Demandes",
+    "Demandes en Attente": "Demandes en Attente",
+    "Demandes Terminées": "Demandes Terminées",
+    "Demandes Récentes": "Demandes Récentes",
+    
+    "Utilisateurs": "Utilisateurs",
+    "Clients": "Clients",
+    "Demandes": "Demandes",
+    "Commandes": "Commandes",
+    "Rapports": "Rapports",
+    "Paramètres": "Paramètres",
+    "Système": "Système",
+    "Gérer les Utilisateurs": "Gérer les Utilisateurs",
+    "Gérer les Demandes": "Gérer les Demandes",
+    "Gestion des Clients": "Gestion des Clients",
+    "Gestion des Demandes": "Gestion des Demandes",
+    "Analyses": "Analyses",
+    
+    "Opération réussie !": "Opération réussie !",
+    "Une erreur s'est produite": "Une erreur s'est produite",
+    "Attention": "Attention",
+    "Information": "Information",
+    "Chargement...": "Chargement...",
+    "Aucune donnée disponible": "Aucune donnée disponible",
+    "Êtes-vous sûr de vouloir supprimer cet élément ?": "Êtes-vous sûr de vouloir supprimer cet élément ?",
+    "Enregistré avec succès": "Enregistré avec succès",
+    "Supprimé avec succès": "Supprimé avec succès",
+    "Mis à jour avec succès": "Mis à jour avec succès",
+    "Créé avec succès": "Créé avec succès",
+    "Envoyé avec succès": "Envoyé avec succès",
+    "Bienvenue": "Bienvenue",
+    "Au revoir": "Au revoir",
+    "Merci": "Merci",
+    "Veuillez patienter": "Veuillez patienter",
+    "Traitement en cours": "Traitement en cours"
 }
