--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -258,5 +258,137 @@
     "Yes": "是的",
     "You are receiving this email because we received a password reset request for your account.": "您收到此电子邮件是因为我们收到了您帐户的密码重设请求。",
     "You're logged in!": "您已登录!",
-    "Your email address is unverified.": "您的电子邮箱未经验证。"
+    "Your email address is unverified.": "您的电子邮箱未经验证。",
+    
+    "NIF CARGO - Transport & Logistique": "NIF CARGO - 运输与物流",
+    "Accueil": "首页",
+    "Services": "服务", 
+    "Suivi": "跟踪",
+    "Galerie": "画廊",
+    "À Propos": "关于我们",
+    "Contact": "联系我们",
+    "Connexion": "登录",
+    "Inscription": "注册",
+    "Déconnexion": "退出",
+    "Mon Compte": "我的账户",
+    "Tableau de Bord": "仪表板",
+    "Administration": "管理",
+    "Langue": "语言",
+    "Français": "法语",
+    "English": "英语",
+    "中文": "中文",
+    
+    "Votre partenaire de confiance pour tous vos besoins de transport": "您值得信赖的运输需求合作伙伴",
+    "Transport Sécurisé et Rapide": "安全快速的运输",
+    "De Lomé à travers le monde, nous livrons vos colis en toute sécurité": "从洛美到世界各地，我们安全地运送您的包裹",
+    "Demander un Devis": "获取报价",
+    "Suivre un Colis": "跟踪包裹",
+    "Nos Services": "我们的服务",
+    "Pourquoi Nous Choisir": "为什么选择我们",
+    "Témoignages": "客户证言",
+    
+    "Express": "快递",
+    "Livraison rapide sous 24-48h": "24-48小时内快速交付",
+    "Standard": "标准", 
+    "Livraison économique sous 3-5 jours": "3-5天内经济交付",
+    "Fret": "货运",
+    "Transport de marchandises volumineuses": "大件货物运输",
+    "International": "国际",
+    "Expédition vers le monde entier": "全球运输",
+    
+    "Demande de Transport": "运输请求",
+    "Ville de Départ": "出发城市",
+    "Ville de Destination": "目的地城市",
+    "Nature du Colis": "包裹性质",
+    "Poids (kg)": "重量 (公斤)",
+    "Volume (m³)": "体积 (立方米)",
+    "Type de Transport": "运输类型",
+    "Urgent": "紧急",
+    "Description": "描述",
+    "Numéro de Suivi": "跟踪号码",
+    "Statut": "状态",
+    "Frais d'Expédition": "运费",
+    "Créer une Demande": "创建请求",
+    "Détails de la Demande": "请求详情",
+    
+    "En Attente": "待处理",
+    "Confirmée": "已确认",
+    "En Cours": "进行中", 
+    "En Transit": "运输中",
+    "Livrée": "已交付",
+    "Annulée": "已取消",
+    
+    "Suivi de Colis": "包裹跟踪",
+    "Entrez votre numéro de suivi": "输入您的跟踪号码",
+    "Suivre": "跟踪",
+    "Informations de Suivi": "跟踪信息",
+    "Statut Actuel": "当前状态",
+    "Livraison Estimée": "预计交付",
+    "Historique du Colis": "包裹历史",
+    "Détails de l'Expédition": "货运详情",
+    "Aucune information trouvée pour ce numéro de suivi": "未找到此跟踪号码的信息",
+    
+    "Nous Contacter": "联系我们",
+    "Contactez-nous": "取得联系",
+    "Adresse": "地址",
+    "Téléphone": "电话",
+    "Heures d'ouverture": "营业时间",
+    "Envoyer un Message": "发送消息",
+    "Votre Nom": "您的姓名",
+    "Votre Email": "您的邮箱",
+    "Sujet": "主题",
+    "Votre Message": "您的消息",
+    "Merci pour votre message. Nous vous répondrons bientôt.": "谢谢您的消息。我们会尽快回复。",
+    
+    "À Propos de Nous": "关于我们",
+    "Liens Rapides": "快速链接",
+    "Informations de Contact": "联系信息",
+    "Suivez-nous": "关注我们",
+    "Politique de Confidentialité": "隐私政策",
+    "Conditions d'Utilisation": "服务条款",
+    "Tous droits réservés": "版权所有",
+    "NIF CARGO est votre partenaire de confiance pour tous vos besoins de transport et de logistique au Togo et dans la région.": "NIF CARGO是您在多哥及该地区所有运输和物流需求的可信赖合作伙伴。",
+    
+    "Vue d'ensemble": "概览",
+    "Statistiques": "统计",
+    "Activité récente": "最近活动",
+    "Actions rapides": "快捷操作",
+    "Mes Demandes": "我的请求",
+    "Notifications": "通知",
+    "Mon Profil": "我的个人资料",
+    "Total des Demandes": "总请求数",
+    "Demandes en Attente": "待处理请求",
+    "Demandes Terminées": "已完成请求",
+    "Demandes Récentes": "最近请求",
+    
+    "Utilisateurs": "用户",
+    "Clients": "客户",
+    "Demandes": "请求",
+    "Commandes": "订单",
+    "Rapports": "报告",
+    "Paramètres": "设置",
+    "Système": "系统",
+    "Gérer les Utilisateurs": "管理用户",
+    "Gérer les Demandes": "管理请求",
+    "Gestion des Clients": "客户管理",
+    "Gestion des Demandes": "请求管理",
+    "Analyses": "分析",
+    
+    "Opération réussie !": "操作成功！",
+    "Une erreur s'est produite": "发生错误",
+    "Attention": "警告",
+    "Information": "信息",
+    "Chargement...": "加载中...",
+    "Aucune donnée disponible": "无可用数据",
+    "Êtes-vous sûr de vouloir supprimer cet élément ?": "您确定要删除此项吗？",
+    "Enregistré avec succès": "保存成功",
+    "Supprimé avec succès": "删除成功",
+    "Mis à jour avec succès": "更新成功",
+    "Créé avec succès": "创建成功",
+    "Envoyé avec succès": "发送成功",
+    "Bienvenue": "欢迎",
+    "Au revoir": "再见",
+    "Merci": "谢谢",
+    "Veuillez patienter": "请等待",
+    "Traitement en cours": "处理中"
 }
