--- a/lang/en.json
+++ b/lang/en.json
@@ -258,5 +258,137 @@
     "Yes": "Yes",
     "You are receiving this email because we received a password reset request for your account.": "You are receiving this email because we received a password reset request for your account.",
     "You're logged in!": "You're logged in!",
-    "Your email address is unverified.": "Your email address is unverified."
+    "Your email address is unverified.": "Your email address is unverified.",
+    
+    "NIF CARGO - Transport & Logistique": "NIF CARGO - Transport & Logistics",
+    "Accueil": "Home",
+    "Services": "Services", 
+    "Suivi": "Tracking",
+    "Galerie": "Gallery",
+    "À Propos": "About",
+    "Contact": "Contact",
+    "Connexion": "Login",
+    "Inscription": "Register",
+    "Déconnexion": "Logout",
+    "Mon Compte": "My Account",
+    "Tableau de Bord": "Dashboard",
+    "Administration": "Administration",
+    "Langue": "Language",
+    "Français": "French",
+    "English": "English",
+    "中文": "Chinese",
+    
+    "Votre partenaire de confiance pour tous vos besoins de transport": "Your trusted partner for all your transportation needs",
+    "Transport Sécurisé et Rapide": "Secure and Fast Transport",
+    "De Lomé à travers le monde, nous livrons vos colis en toute sécurité": "From Lomé to around the world, we deliver your packages safely",
+    "Demander un Devis": "Get Quote",
+    "Suivre un Colis": "Track Package",
+    "Nos Services": "Our Services",
+    "Pourquoi Nous Choisir": "Why Choose Us",
+    "Témoignages": "Testimonials",
+    
+    "Express": "Express",
+    "Livraison rapide sous 24-48h": "Fast delivery within 24-48h",
+    "Standard": "Standard", 
+    "Livraison économique sous 3-5 jours": "Economical delivery within 3-5 days",
+    "Fret": "Cargo",
+    "Transport de marchandises volumineuses": "Transport of bulky goods",
+    "International": "International",
+    "Expédition vers le monde entier": "Shipping worldwide",
+    
+    "Demande de Transport": "Transport Request",
+    "Ville de Départ": "Departure City",
+    "Ville de Destination": "Destination City",
+    "Nature du Colis": "Package Nature",
+    "Poids (kg)": "Weight (kg)",
+    "Volume (m³)": "Volume (m³)",
+    "Type de Transport": "Transport Type",
+    "Urgent": "Urgent",
+    "Description": "Description",
+    "Numéro de Suivi": "Tracking Number",
+    "Statut": "Status",
+    "Frais d'Expédition": "Shipping Cost",
+    "Créer une Demande": "Create Request",
+    "Détails de la Demande": "Request Details",
+    
+    "En Attente": "Pending",
+    "Confirmée": "Confirmed",
+    "En Cours": "In Progress", 
+    "En Transit": "In Transit",
+    "Livrée": "Delivered",
+    "Annulée": "Cancelled",
+    
+    "Suivi de Colis": "Package Tracking",
+    "Entrez votre numéro de suivi": "Enter your tracking number",
+    "Suivre": "Track",
+    "Informations de Suivi": "Tracking Information",
+    "Statut Actuel": "Current Status",
+    "Livraison Estimée": "Estimated Delivery",
+    "Historique du Colis": "Package History",
+    "Détails de l'Expédition": "Shipment Details",
+    "Aucune information trouvée pour ce numéro de suivi": "No information found for this tracking number",
+    
+    "Nous Contacter": "Contact Us",
+    "Contactez-nous": "Get in Touch",
+    "Adresse": "Address",
+    "Téléphone": "Phone",
+    "Heures d'ouverture": "Opening Hours",
+    "Envoyer un Message": "Send Message",
+    "Votre Nom": "Your Name",
+    "Votre Email": "Your Email",
+    "Sujet": "Subject",
+    "Votre Message": "Your Message",
+    "Merci pour votre message. Nous vous répondrons bientôt.": "Thank you for your message. We will reply soon.",
+    
+    "À Propos de Nous": "About Us",
+    "Liens Rapides": "Quick Links",
+    "Informations de Contact": "Contact Information",
+    "Suivez-nous": "Follow Us",
+    "Politique de Confidentialité": "Privacy Policy",
+    "Conditions d'Utilisation": "Terms of Service",
+    "Tous droits réservés": "All rights reserved",
+    "NIF CARGO est votre partenaire de confiance pour tous vos besoins de transport et de logistique au Togo et dans la région.": "NIF CARGO is your trusted partner for all your transport and logistics needs in Togo and the region.",
+    
+    "Vue d'ensemble": "Overview",
+    "Statistiques": "Statistics",
+    "Activité récente": "Recent Activity",
+    "Actions rapides": "Quick Actions",
+    "Mes Demandes": "My Requests",
+    "Notifications": "Notifications",
+    "Mon Profil": "My Profile",
+    "Total des Demandes": "Total Requests",
+    "Demandes en Attente": "Pending Requests",
+    "Demandes Terminées": "Completed Requests",
+    "Demandes Récentes": "Recent Requests",
+    
+    "Utilisateurs": "Users",
+    "Clients": "Clients",
+    "Demandes": "Requests",
+    "Commandes": "Orders",
+    "Rapports": "Reports",
+    "Paramètres": "Settings",
+    "Système": "System",
+    "Gérer les Utilisateurs": "Manage Users",
+    "Gérer les Demandes": "Manage Requests",
+    "Gestion des Clients": "Client Management",
+    "Gestion des Demandes": "Request Management",
+    "Analyses": "Analytics",
+    
+    "Opération réussie !": "Operation successful!",
+    "Une erreur s'est produite": "An error occurred",
+    "Attention": "Warning",
+    "Information": "Information",
+    "Chargement...": "Loading...",
+    "Aucune donnée disponible": "No data available",
+    "Êtes-vous sûr de vouloir supprimer cet élément ?": "Are you sure you want to delete this item?",
+    "Enregistré avec succès": "Saved successfully",
+    "Supprimé avec succès": "Deleted successfully",
+    "Mis à jour avec succès": "Updated successfully",
+    "Créé avec succès": "Created successfully",
+    "Envoyé avec succès": "Sent successfully",
+    "Bienvenue": "Welcome",
+    "Au revoir": "Goodbye",
+    "Merci": "Thank you",
+    "Veuillez patienter": "Please wait",
+    "Traitement en cours": "Processing"
 }
