--- a/lang/fr.json
+++ b/lang/fr.json
@@ -390,5 +390,19 @@
     "Au revoir": "Au revoir",
     "Merci": "Merci",
     "Veuillez patienter": "Veuillez patienter",
-    "Traitement en cours": "Traitement en cours"
+    "Traitement en cours": "Traitement en cours",
+    
+    "Mon espace": "Mon espace",
+    "Suivre un colis": "Suivre un colis",
+    "Faire une demande": "Faire une demande",
+    "Administrateur": "Administrateur",
+    "Client": "Client",
+    "Mon profil": "Mon profil",
+    "Se connecter": "Se connecter",
+    "Se souvenir de moi": "Se souvenir de moi",
+    "Mot de passe oublié ?": "Mot de passe oublié ?",
+    "Prendre rendez-vous": "Prendre rendez-vous",
+    "Nous localiser": "Nous localiser",
+    "Accédez facilement à nos implantations": "Accédez facilement à nos implantations",
+    "Site Public": "Site Public"
 }
