rajout de commentaire et afichage des images

--- a/lang/zh_CN.json
+++ b/lang/zh_CN.json
@@ -1,408 +1,96 @@
 {
-    "(and :count more error)": "(还有 :count 个错误)",
-    "(and :count more errors)": "(还有 :count 个错误)",
-    "A decryption key is required.": "需要解密密钥。",
-    "A new verification link has been sent to the email address you provided during registration.": "一个新的验证链接已经发送至您在注册时提供的电子邮件地址。",
-    "A new verification link has been sent to your email address.": "一个新的验证链接已经发送到你的电子邮件地址。",
-    "A Timeout Occurred": "发生超时",
-    "Accept": "接受",
-    "Accepted": "已接受",
-    "Action": "操作",
-    "Actions": "操作",
-    "Add": "添加",
-    "Add :name": "添加 :name",
-    "Admin": "管理员",
-    "Agree": "同意",
-    "All rights reserved.": "版权所有。",
-    "Already registered?": "已注册？",
-    "Already Reported": "已上报",
-    "Archive": "档案",
-    "Are you sure you want to delete your account?": "您确定要删除您的帐户吗？",
-    "Assign": "分配",
-    "Associate": "联系",
-    "Attach": "附加",
-    "Bad Gateway": "网关错误",
-    "Bad Request": "请求错误",
-    "Bandwidth Limit Exceeded": "超出带宽限制",
-    "Browse": "浏览",
-    "Cancel": "取消",
-    "Choose": "选择",
-    "Choose :name": "选择:name",
-    "Choose File": "选择文件",
-    "Choose Image": "选择图片",
-    "Click here to re-send the verification email.": "点击这里重新发送验证邮件。",
-    "Click to copy": "点击复制",
-    "Client Closed Request": "客户端关闭请求",
-    "Close": "关闭",
-    "Collapse": "收缩",
-    "Collapse All": "全部收缩",
-    "Comment": "评论",
-    "Confirm": "确认",
-    "Confirm Password": "确认密码",
-    "Conflict": "冲突",
-    "Connect": "连接",
-    "Connection Closed Without Response": "连接关闭无响应",
-    "Connection Timed Out": "连接超时",
-    "Continue": "继续请求",
-    "Create": "创建",
-    "Create :name": "创建 :name 个",
-    "Created": "已创建",
-    "Current Password": "当前密码",
-    "Dashboard": "控制面板",
-    "Delete": "删除",
-    "Delete :name": "删除 :name 个",
-    "Delete Account": "删除账户",
-    "Detach": "分离",
-    "Details": "详情",
-    "Disable": "禁用",
-    "Discard": "丢弃",
-    "Done": "完成",
-    "Down": "向下",
-    "Duplicate": "复制",
-    "Duplicate :name": "重复：名称",
-    "Edit": "编辑",
-    "Edit :name": "编辑:name",
-    "Email": "电子邮箱",
-    "email": ":attribute 不是一个合法的邮箱。",
-    "Email Password Reset Link": "电子邮件密码重置链接",
-    "Enable": "启用",
-    "Encrypted environment file already exists.": "加密环境配置文件已存在。",
-    "Encrypted environment file not found.": "未找到加密环境配置文件。",
-    "Ensure your account is using a long, random password to stay secure.": "确保您的账户使用足够长且随机的密码来保证安全。",
-    "Environment file already exists.": "环境配置文件已存在。",
-    "Environment file not found.": "未找到环境配置文件。",
-    "errors": "错误",
-    "Expand": "展开",
-    "Expand All": "展开全部",
-    "Expectation Failed": "期望不满足",
-    "Explanation": "解释",
-    "Export": "导出",
-    "Export :name": "导出 :name",
-    "Failed Dependency": "失败的依赖",
-    "File": "文件",
-    "Files": "文件",
-    "Forbidden": "访问被拒绝",
-    "Forgot your password?": "忘记密码？",
-    "Forgot your password? No problem. Just let us know your email address and we will email you a password reset link that will allow you to choose a new one.": "忘记密码？没关系。输入您的电子邮件地址，我们将通过电子邮件向您发送密码重置链接，让您重置一个新的密码。",
-    "Found": "临时移动",
-    "Gateway Timeout": "网关超时",
-    "Go Home": "回首页",
-    "Go to page :page": "前往第 :page 页",
-    "Gone": "不可用",
-    "Hello!": "您好！",
-    "Hide": "隐藏",
-    "Hide :name": "隐藏 :name",
-    "Home": "家",
-    "HTTP Version Not Supported": "HTTP版本不支持",
-    "I'm a teapot": "我是一个茶壶",
-    "If you did not create an account, no further action is required.": "如果您未注册帐号，请忽略此邮件。",
-    "If you did not request a password reset, no further action is required.": "如果您未申请重设密码，请忽略此邮件。",
-    "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "如果您单击「:actionText」按钮时遇到问题，请复制下方链接到浏览器中访问：",
-    "IM Used": "IM已使用",
-    "Image": "图像",
-    "Impersonate": "模拟登录",
-    "Impersonation": "冒充",
-    "Import": "导入",
-    "Import :name": "导入 :name",
-    "Insufficient Storage": "存储空间不足",
-    "Internal Server Error": "内部服务器错误",
-    "Introduction": "介绍",
-    "Invalid filename.": "无效的文件名。",
-    "Invalid JSON was returned from the route.": "从路由返回无效的 JSON。",
-    "Invalid SSL Certificate": "无效的SSL证书",
-    "Length Required": "长度要求",
-    "Like": "喜欢",
-    "Load": "加载",
-    "Localize": "本地化",
-    "Location": "地点",
-    "Locked": "锁定",
-    "Log In": "登录",
-    "Log in": "登录",
-    "Log Out": "登出",
-    "Login": "登录",
-    "Logout": "登出",
-    "Loop Detected": "检测到环路",
-    "Maintenance Mode": "服务不可用",
-    "Method Not Allowed": "方法不允许",
-    "Misdirected Request": "错误的请求",
-    "Moved Permanently": "已永久移动",
-    "Multi-Status": "多状态",
-    "Multiple Choices": "多种选择",
-    "Name": "姓名",
-    "name": "姓名",
-    "Network Authentication Required": "需要网络验证",
-    "Network Connect Timeout Error": "网络连接超时",
-    "Network Read Timeout Error": "网络读取超时",
-    "New": "新建",
-    "New :name": "新 :name",
-    "New Password": "新的密码",
-    "No": "不",
-    "No Content": "无内容",
-    "Non-Authoritative Information": "非权威信息",
-    "Not Acceptable": "无法接受",
-    "Not Extended": "未延期",
-    "Not Found": "页面不存在",
-    "Not Implemented": "未实现",
-    "Not Modified": "未修改",
-    "of": "于",
-    "OK": "OK",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Before deleting your account, please download any data or information that you wish to retain.": "一旦您的账户被删除，其所有资源和数据将被永久删除。在删除您的账户之前，请下载您希望保留的任何数据或信息。",
-    "Once your account is deleted, all of its resources and data will be permanently deleted. Please enter your password to confirm you would like to permanently delete your account.": "一旦您的帐户被删除，其所有资源和数据将被永久删除。请输入您的密码以确认您要永久删除您的帐户。",
-    "Open": "打开",
-    "Open in a current window": "在当前窗口中打开",
-    "Open in a new window": "在新窗口中打开",
-    "Open in a parent frame": "在父框架中打开",
-    "Open in the topmost frame": "在最上面的框架中打开",
-    "Open on the website": "在网站上打开",
-    "Origin Is Unreachable": "原点无法到达",
-    "Page Expired": "页面会话已超时",
-    "Pagination Navigation": "分页导航",
-    "Partial Content": "部分内容",
-    "Password": "密码",
-    "password": "密码错误",
-    "Payload Too Large": "请求实体过大",
-    "Payment Required": "需要付款",
-    "Permanent Redirect": "永久重定向",
-    "Please click the button below to verify your email address.": "请点击下面按钮验证您的 E-mail：",
-    "Precondition Failed": "前提条件未满足",
-    "Precondition Required": "前提要求",
-    "Preview": "预览",
-    "Price": "价格",
-    "Processing": "处理中",
-    "Profile": "资料",
-    "Profile Information": "账户资料",
-    "Proxy Authentication Required": "需要代理验证",
-    "Railgun Error": "轨道炮错误",
-    "Range Not Satisfiable": "请求范围不符合",
-    "Record": "记录",
-    "Regards,": "致敬,",
-    "Register": "注册",
-    "Remember me": "记住我",
-    "Request Header Fields Too Large": "请求标头字段太大",
-    "Request Timeout": "请求超时",
-    "Resend Verification Email": "重新发送验证邮件",
-    "Reset Content": "重置内容",
-    "Reset Password": "重置密码",
-    "Reset Password Notification": "重置密码通知",
-    "Restore": "恢复",
-    "Restore :name": "恢复:name",
-    "results": "结果",
-    "Retry With": "重试",
-    "Save": "保存",
-    "Save & Close": "保存并关闭",
-    "Save & Return": "保存并返回",
-    "Save :name": "保存 :name",
-    "Saved.": "已保存。",
-    "Search": "搜索",
-    "Search :name": "搜索 :name",
-    "See Other": "见其他",
-    "Select": "选择",
-    "Select All": "全选",
-    "Send": "发送",
-    "Server Error": "服务器错误",
-    "Service Unavailable": "服务不可用",
-    "Session Has Expired": "会话已过期",
-    "Settings": "设置",
-    "Show": "显示",
-    "Show :name": "显示 :name",
-    "Show All": "显示所有",
-    "Showing": "显示中",
-    "Sign In": "登入",
-    "Solve": "解决",
-    "SSL Handshake Failed": "SSL握手失败",
-    "Start": "开始",
-    "Stop": "停止",
-    "Submit": "提交",
-    "Subscribe": "订阅",
-    "Switch": "切换",
-    "Switch To Role": "切换角色",
-    "Switching Protocols": "切换协议",
-    "Tag": "标签",
-    "Tags": "标签",
-    "Temporary Redirect": "临时重定向",
-    "Thanks for signing up! Before getting started, could you verify your email address by clicking on the link we just emailed to you? If you didn't receive the email, we will gladly send you another.": "谢谢您的注册！在开始之前，在开始之前，您可以通过点击我们刚刚给您发送的链接来验证您的电子邮件地址，如果您没有收到邮件，我们将很乐意再给您发送一封邮件。",
-    "The given data was invalid.": "给定的数据无效。",
-    "The response is not a streamed response.": "该响应不是流式响应。",
-    "The response is not a view.": "响应不是视图。",
-    "This action is unauthorized.": "此操作未经授权。",
-    "This is a secure area of the application. Please confirm your password before continuing.": "请在继续之前确认您的密码。",
-    "This password reset link will expire in :count minutes.": "这个重设密码链接将会在 :count 分钟后失效。",
-    "to": "至",
-    "Toggle navigation": "切换导航",
-    "Too Early": "太早了",
-    "Too Many Requests": "请求次数过多。",
-    "Translate": "翻译",
-    "Translate It": "翻译它",
-    "Unauthorized": "未授权",
-    "Unavailable For Legal Reasons": "法律原因不可用",
-    "Unknown Error": "未知错误",
-    "Unpack": "打开",
-    "Unprocessable Entity": "不可处理的实体",
-    "Unsubscribe": "退订",
-    "Unsupported Media Type": "不支持的媒体类型",
-    "Up": "向上",
-    "Update": "更新",
-    "Update :name": "更新:name",
-    "Update Password": "更新密码",
-    "Update your account's profile information and email address.": "更新您的账户资料和电子邮件地址。",
-    "Upgrade Required": "需要升级",
-    "URI Too Long": "URI太长了",
-    "Use Proxy": "使用代理",
-    "User": "用户",
-    "Variant Also Negotiates": "变体协商",
-    "Verify Email Address": "验证 E-mail",
-    "View": "查看",
-    "View :name": "查看 :name",
-    "Web Server is Down": "Web服务器已关闭",
-    "Whoops!": "哎呀！",
-    "Yes": "是的",
-    "You are receiving this email because we received a password reset request for your account.": "您收到此电子邮件是因为我们收到了您帐户的密码重设请求。",
-    "You're logged in!": "您已登录!",
-    "Your email address is unverified.": "您的电子邮箱未经验证。",
-    
-    "NIF CARGO - Transport & Logistique": "NIF CARGO - 运输与物流",
     "Accueil": "首页",
-    "Services": "服务", 
-    "Suivi": "跟踪",
-    "Galerie": "画廊",
-    "À Propos": "关于我们",
-    "Contact": "联系我们",
+    "Bienvenue": "欢迎",
     "Connexion": "登录",
     "Inscription": "注册",
-    "Déconnexion": "退出",
-    "Mon Compte": "我的账户",
-    "Tableau de Bord": "仪表板",
-    "Administration": "管理",
-    "Langue": "语言",
-    "Français": "法语",
-    "English": "英语",
-    "中文": "中文",
-    
-    "Votre partenaire de confiance pour tous vos besoins de transport": "您值得信赖的运输需求合作伙伴",
-    "Transport Sécurisé et Rapide": "安全快速的运输",
-    "De Lomé à travers le monde, nous livrons vos colis en toute sécurité": "从洛美到世界各地，我们安全地运送您的包裹",
-    "Demander un Devis": "获取报价",
-    "Suivre un Colis": "跟踪包裹",
-    "Nos Services": "我们的服务",
-    "Pourquoi Nous Choisir": "为什么选择我们",
-    "Témoignages": "客户证言",
-    
-    "Express": "快递",
-    "Livraison rapide sous 24-48h": "24-48小时内快速交付",
-    "Standard": "标准", 
-    "Livraison économique sous 3-5 jours": "3-5天内经济交付",
-    "Fret": "货运",
-    "Transport de marchandises volumineuses": "大件货物运输",
-    "International": "国际",
-    "Expédition vers le monde entier": "全球运输",
-    
-    "Demande de Transport": "运输请求",
-    "Ville de Départ": "出发城市",
-    "Ville de Destination": "目的地城市",
-    "Nature du Colis": "包裹性质",
-    "Poids (kg)": "重量 (公斤)",
-    "Volume (m³)": "体积 (立方米)",
-    "Type de Transport": "运输类型",
-    "Urgent": "紧急",
-    "Description": "描述",
-    "Numéro de Suivi": "跟踪号码",
-    "Statut": "状态",
-    "Frais d'Expédition": "运费",
-    "Créer une Demande": "创建请求",
-    "Détails de la Demande": "请求详情",
-    
-    "En Attente": "待处理",
-    "Confirmée": "已确认",
-    "En Cours": "进行中", 
-    "En Transit": "运输中",
-    "Livrée": "已交付",
-    "Annulée": "已取消",
-    
-    "Suivi de Colis": "包裹跟踪",
-    "Entrez votre numéro de suivi": "输入您的跟踪号码",
-    "Suivre": "跟踪",
-    "Informations de Suivi": "跟踪信息",
-    "Statut Actuel": "当前状态",
-    "Livraison Estimée": "预计交付",
-    "Historique du Colis": "包裹历史",
-    "Détails de l'Expédition": "货运详情",
-    "Aucune information trouvée pour ce numéro de suivi": "未找到此跟踪号码的信息",
-    
-    "Nous Contacter": "联系我们",
-    "Contactez-nous": "取得联系",
-    "Adresse": "地址",
-    "Téléphone": "电话",
-    "Heures d'ouverture": "营业时间",
-    "Envoyer un Message": "发送消息",
-    "Votre Nom": "您的姓名",
-    "Votre Email": "您的邮箱",
-    "Sujet": "主题",
-    "Votre Message": "您的消息",
-    "Merci pour votre message. Nous vous répondrons bientôt.": "谢谢您的消息。我们会尽快回复。",
-    
-    "À Propos de Nous": "关于我们",
-    "Liens Rapides": "快速链接",
-    "Informations de Contact": "联系信息",
-    "Suivez-nous": "关注我们",
-    "Politique de Confidentialité": "隐私政策",
-    "Conditions d'Utilisation": "服务条款",
-    "Tous droits réservés": "版权所有",
-    "NIF CARGO est votre partenaire de confiance pour tous vos besoins de transport et de logistique au Togo et dans la région.": "NIF CARGO是您在多哥及该地区所有运输和物流需求的可信赖合作伙伴。",
-    
-    "Vue d'ensemble": "概览",
-    "Statistiques": "统计",
-    "Activité récente": "最近活动",
-    "Actions rapides": "快捷操作",
-    "Mes Demandes": "我的请求",
-    "Notifications": "通知",
-    "Mon Profil": "我的个人资料",
-    "Total des Demandes": "总请求数",
-    "Demandes en Attente": "待处理请求",
-    "Demandes Terminées": "已完成请求",
-    "Demandes Récentes": "最近请求",
-    
-    "Utilisateurs": "用户",
-    "Clients": "客户",
-    "Demandes": "请求",
-    "Commandes": "订单",
-    "Rapports": "报告",
-    "Paramètres": "设置",
-    "Système": "系统",
-    "Gérer les Utilisateurs": "管理用户",
-    "Gérer les Demandes": "管理请求",
-    "Gestion des Clients": "客户管理",
-    "Gestion des Demandes": "请求管理",
-    "Analyses": "分析",
-    
-    "Opération réussie !": "操作成功！",
-    "Une erreur s'est produite": "发生错误",
-    "Attention": "警告",
-    "Information": "信息",
-    "Chargement...": "加载中...",
-    "Aucune donnée disponible": "无可用数据",
-    "Êtes-vous sûr de vouloir supprimer cet élément ?": "您确定要删除此项吗？",
-    "Enregistré avec succès": "保存成功",
-    "Supprimé avec succès": "删除成功",
-    "Mis à jour avec succès": "更新成功",
-    "Créé avec succès": "创建成功",
-    "Envoyé avec succès": "发送成功",
-    "Bienvenue": "欢迎",
-    "Au revoir": "再见",
-    "Merci": "谢谢",
-    "Veuillez patienter": "请稍候",
-    "Traitement en cours": "处理中",
-    
     "Mon espace": "我的空间",
-    "Suivre un colis": "跟踪包裹",
-    "Faire une demande": "提出请求",
-    "Administrateur": "管理员",
-    "Client": "客户",
-    "Mon profil": "我的资料",
     "Se connecter": "登录",
-    "Se souvenir de moi": "记住我",
-    "Mot de passe oublié ?": "忘记密码?",
-    "Prendre rendez-vous": "预约",
-    "Nous localiser": "找到我们",
-    "Accédez facilement à nos implantations": "轻松访问我们的办事处",
-    "Site Public": "公共网站"
+    "S'inscrire": "注册",
+    "Déconnexion": "退出登录",
+    "Transport Maritime": "海运",
+    "Transport Aérien Express": "快递空运",
+    "Solutions Logistiques": "物流解决方案",
+    "Réseau International": "国际网络",
+    "vers l'Afrique": "到非洲",
+    "Complètes": "完整的",
+    "en Afrique": "在非洲",
+    "Conteneurs et groupage avec dédouanement inclus. Solutions fiables pour vos échanges commerciaux.": "集装箱和拼箱服务，包含清关。为您的商业交流提供可靠解决方案。",
+    "Livraison urgente 24-48h pour marchandises sensibles. Rapidité et sécurité garanties.": "敏感货物24-48小时紧急配送。保证速度和安全。",
+    "De l'emballage à la livraison finale. Une gestion intégrée de votre supply chain.": "从包装到最终配送。您供应链的综合管理。",
+    "Présents dans 15+ pays avec des partenaires locaux de confiance. Votre pont vers l'Afrique.": "在15+个国家拥有值得信赖的本地合作伙伴。您通往非洲的桥梁。",
+    "Découvrez comment nos solutions transforment le transport de marchandises avec des services innovants et fiables.": "了解我们的解决方案如何通过创新可靠的服务改变货物运输。",
+    "Faire une demande": "提交请求",
+    "Suivre un colis": "追踪包裹",
+    "Sécurité garantie": "安全保障",
+    "Livraison rapide": "快速配送",
+    "Support 24/7": "24/7 支持",
+    "Demandes traitées": "已处理请求",
+    "Clients satisfaits": "满意客户",
+    "Pays desservis": "服务国家",
+    "Années d'expérience": "经验年数",
+    "Actualités & Annonces": "新闻与公告",
+    "Restez": "保持",
+    "informé": "知情",
+    "Découvrez nos dernières nouvelles, promotions et actualités importantes": "了解我们最新的新闻、促销和重要更新",
+    "À la une": "头条新闻",
+    "Lire la suite": "阅读更多",
+    "Profiter": "享受优惠",
+    "Nos Services": "我们的服务",
+    "Solutions": "解决方案",
+    "complètes": "完整的",
+    "Des services de transport adaptés à tous vos besoins logistiques en Afrique et au-delà": "适应您在非洲及其他地区所有物流需求的运输服务",
+    "Conteneurs et groupage vers l'Afrique et l'Europe avec dédouanement complet": "运往非洲和欧洲的集装箱和拼箱服务，包含完整清关",
+    "Conteneurs 20 et 40 pieds": "20英尺和40英尺集装箱",
+    "Groupage LCL": "拼箱服务",
+    "Dédouanement inclus": "包含清关",
+    "En savoir plus": "了解更多",
+    "Transport Aérien": "空运",
+    "Livraison express pour vos marchandises urgentes et fragiles": "紧急和易碎货物的快递服务",
+    "Livraison 24-48h": "24-48小时配送",
+    "Marchandises fragiles": "易碎货物",
+    "Réseau mondial": "全球网络",
+    "Transport Terrestre": "陆运",
+    "Flotte moderne pour le transport routier en Afrique de l'Ouest": "西非道路运输的现代化车队",
+    "Camions réfrigérés": "冷藏车",
+    "Transport véhicules": "车辆运输",
+    "Livraison domicile": "送货上门",
+    "Notre Processus": "我们的流程",
+    "Votre envoi en": "您的货运",
+    "4 étapes simples": "4个简单步骤",
+    "Un processus transparent et professionnel du début à la fin": "从始至终透明专业的流程",
+    "Demande en ligne": "在线申请",
+    "Remplissez notre formulaire en ligne avec les détails de votre envoi": "填写我们的在线表格，提供您的货运详情",
+    "Devis personnalisé": "个性化报价",
+    "Recevez votre devis personnalisé sous 24h avec options de paiement": "24小时内收到个性化报价和付款选项",
+    "Transport sécurisé": "安全运输",
+    "Nous organisons l'enlèvement et le transport de vos marchandises": "我们组织您货物的取件和运输",
+    "Livraison finale": "最终配送",
+    "Suivez votre colis en temps réel jusqu'à la livraison finale": "实时跟踪您的包裹直到最终配送",
+    "Démarrer mon envoi": "开始我的货运",
+    "Galerie": "画廊",
+    "Notre": "我们的",
+    "univers": "世界",
+    "Découvrez nos activités, nos équipes et nos réalisations en images": "通过图片了解我们的活动、团队和成就",
+    "Explorer la galerie complète": "探索完整画廊",
+    "Pourquoi nous choisir": "为什么选择我们",
+    "L'excellence": "卓越的",
+    "logistique": "物流",
+    "Assurance tous risques et emballage professionnel pour protéger vos marchandises": "全险保障和专业包装保护您的货物",
+    "Suivi en temps réel": "实时跟踪",
+    "Notifications SMS et email à chaque étape du transport": "运输每个阶段的短信和邮件通知",
+    "Service rapide": "快速服务",
+    "Délais respectés et service client réactif 7j/7": "遵守期限，7天24小时响应客户服务",
+    "Prix compétitifs": "具有竞争力的价格",
+    "Tarifs transparents sans frais cachés et options de paiement flexibles": "透明价格，无隐藏费用，灵活付款选项",
+    "Présent dans plus de 15 pays avec des partenaires de confiance": "在超过15个国家拥有值得信赖的合作伙伴",
+    "Siège social": "总部",
+    "Agence": "分支机构",
+    "Partenaire": "合作伙伴",
+    "Prêt à expédier vos marchandises ?": "准备运输您的货物了吗？",
+    "Obtenez un devis gratuit personnalisé en moins de 2 minutes": "2分钟内获得个性化免费报价",
+    "Demander un devis gratuit": "申请免费报价",
+    "Nous contacter": "联系我们",
+    "100% Sécurisé": "100% 安全",
+    "Réponse sous 24h": "24小时内回复",
+    "Service Premium": "高级服务"
 }
